--- a/day11b.html
+++ b/day11b.html
@@ -6,7 +6,7 @@
 flex-wrap:wrap;
   }
   #box-1 {
-    background-color: dodgerblue;
+    background-color: blue;
     width: 25%;
     height: 50%;
   }
