--- a/day16.html
+++ b/day16.html
@@ -14,15 +14,14 @@
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
     /* Only change code below this line */
-grid-row-gap:10px;
-grid-column-gap:20px;
+grid-gap: 10px 20px;
     
     /* Only change code above this line */
   }
 </style>
 <div class="container">
   <div class="d1">1</div>
-  <div class="d2">2</div>
+  <div class="d2">2</div>   
   <div class="d3">3</div>
   <div class="d4">4</div>
   <div class="d5">5</div>
